--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-navbar></app-navbar>
+<div *ngIf="ready">
+  <app-navbar></app-navbar>
 
-<div class="container">
-  <router-outlet></router-outlet> 
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
