--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -10,18 +10,23 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
-      <li *ngIf="!auth.authenticated" class="nav-item">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
-      <li ngbDropdown *ngIf="auth.authenticated" class="nav-item dropdown">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle" routerLink="/" id="dropdown01" data-toggle="dropdown"
+      <ng-template #guest>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+      </ng-template>
+
+      <li ngbDropdown *ngIf="auth.authenticated; else guest" class="nav-item dropdown">
+        <a ngbDropdownToggle class="nav-link dropdown-toggle"  id="dropdown01" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           {{ auth.currentUserDisplayName }}
         </a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-          <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+          <ng-container *ngIf="auth.isAdmin">
+            <a class="dropdown-item disabled" routerLink="/admin/orders">Manage Orders</a>
+            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+          </ng-container>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
