--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,10 @@
+
 <div class="login-template">
+    <span class="google-img">
+        <img src="../../assets/images/google_logo.png" alt="google image for login">
+    </span>
     <button 
     (click)="login()"
-    class="btn btn-primary btn-lg">
-     Login with Google</button>
+    class="btn btn-primary">
+    Google With Google</button>
 </div>
