--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -17,16 +17,18 @@
       </ng-template>
 
       <li ngbDropdown *ngIf="auth.authenticated; else guest" class="nav-item dropdown">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle"  id="dropdown01" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
+        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
           {{ auth.currentUserDisplayName }}
         </a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <ng-container *ngIf="auth.isAdmin">
-            <a class="dropdown-item disabled" routerLink="/admin/orders">Manage Orders</a>
-            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-          </ng-container>
+          <!-- <ng-container *ngIf="auth.isAdmin"> -->
+          <a [ngClass]="auth.isAdmin ? 'dropdown-item' : 'dropdown-item disabled'" routerLink="/admin/orders">
+            Manage Orders</a>
+          <a [ngClass]="auth.isAdmin ? 'dropdown-item' : 'dropdown-item disabled'" routerLink="/admin/products">
+            Manage Products</a>
+          <!-- </ng-container> -->
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
