added spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
   </div>
 </div>
 <ng-template #spinner>
-  <h4 class="spinner">Please wait.....</h4>
+  <ng-spinner [display]="true"></ng-spinner>
 </ng-template>
