--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -22,13 +22,9 @@
           {{ auth.currentUserDisplayName }}
         </a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <!-- <ng-container *ngIf="auth.isAdmin"> -->
-          <a [ngClass]="auth.isAdmin ? 'dropdown-item' : 'dropdown-item disabled'" routerLink="/admin/orders">
-            Manage Orders</a>
-          <a [ngClass]="auth.isAdmin ? 'dropdown-item' : 'dropdown-item disabled'" routerLink="/admin/products">
-            Manage Products</a>
-          <!-- </ng-container> -->
+          <a class="dropdown-item" routerLink="/{{ usernameSpliter }}/orders">My Orders</a>
+          <a class="{{ routeLinkClass }}" routerLink="/admin/orders">Manage Orders</a>
+          <a class="{{ routeLinkClass }}" routerLink="/admin/products">Manage Products</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
