add updated-deleted function

--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,1 +1,22 @@
-<a routerLink="/admin/product/add-product" class="btn btn-primary">New Product</a>
+<p>
+    <a routerLink="/admin/product/add-product" class="btn btn-primary">New Product</a>
+</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Price ( USD )</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of products$ | async ">
+            <td>{{ p.title }}</td>
+            <td>{{ p.price |  currency:'USD':true }}</td>
+            <td>
+                <a [routerLink]="['/admin/product', p.$key]" class="btn btn-primary">Edit</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
