--- a/src/app/form/admin/product-form/product-form.component.html
+++ b/src/app/form/admin/product-form/product-form.component.html
@@ -1,32 +1,67 @@
-<form #f="ngForm" (ngSubmit)="save(f.value)">
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input ngModel name="title" id="title" type="text" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="price">Price</label>
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text">$</span>
+<div class="row">
+  <!-- Bootstrapt Form -->
+  <div class="col-md-7">
+    <form #f="ngForm" (ngSubmit)="save(f.value)">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control"
+          required>
+        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+          Title is Required.
+        </div>
       </div>
-      <input ngModel name="price" id="price" type="number" class="form-control">
-      <div class="input-group-append">
-        <span class="input-group-text">.00</span>
+      <div class="form-group">
+        <label for="price">Price</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">$</span>
+          </div>
+          <input #price="ngModel" [(ngModel)]="product.price" name="price" id="price" type="number" class="form-control"
+            required>
+          <div class="input-group-append">
+            <span class="input-group-text">.00</span>
+          </div>
+        </div>
+        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+          Price is Required.
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="category">Category</label>
+        <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control"
+          required>
+          <option value=""></option>
+          <option *ngFor="let c of categories$ | async" [value]="c.$key">
+            {{ c.name }}
+          </option>
+        </select>
+        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+          Category is Required
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="imageUrl">image URL</label>
+        <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control"
+          required>
+        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+          Image-URL is Required.
+        </div>
+      </div>
+      <button class="btn btn-primary">Save</button>
+      <button type="button" class="btn btn-danger" (click)="delete()">Delete</button>
+      <button type="reset" class="btn btn-primary">Reset</button>
+    </form>
+
+  </div>
+  <!-- Bootstrap Card -->
+  <!-- Property binding : #title.value -->
+  <div class="col-md-5">
+    <div class="card" style="width: 24rem;">
+      <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
+      <div class="card-body">
+        <h5 class="card-title">{{ product.title }}</h5>
+        <p class="card-text">{{ product.price | currency:'USD':true }}</p>
       </div>
     </div>
   </div>
-  <div class="form-group">
-    <label for="category">Category</label>
-    <select ngModel name="category" id="category" class="form-control">
-      <option value=""></option>
-      <option *ngFor="let c of categories$ | async" [value]="c.$key">
-        {{ c.name }}
-      </option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="imageUrl">image URL</label>
-    <input ngModel name="imageUrl" id="imageUrl" type="text" class="form-control">
-  </div>
-  <button class="btn btn-primary">Save</button>
-</form>
+</div>
