implemented angular-data-table

--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -2,24 +2,44 @@
     <p>
         <a routerLink="/admin/product/add-product" class="btn btn-primary">New Product</a>
     </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Price ( USD )</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let p of products$ | async ">
-                <td>{{ p.title }}</td>
-                <td>{{ p.price | currency:'USD':true }}</td>
-                <td>
-                    <a [routerLink]="['/admin/product', p.$key]" class="btn btn-primary">Edit</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <p>
+        <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="Search...">
+    </p>
+
+    <data-table
+        [id]="my-table"
+        [items]="items"
+        [itemCount]="itemCount"
+        (reload)="reloadItems($event)"
+    >
+        <data-table-column
+            [property]="'title'"
+            [header]="'Title'"
+            [sortable]="true"
+            [resizable]="true">
+        </data-table-column>
+
+        <data-table-column
+            [property]="'price'"
+            [header]="'Price'"
+            [sortable]="true"
+            [resizable]="true">
+            <ng-template #dataTableCell let-item="item">
+                {{ item.price | currency:'USD': true }}
+            </ng-template>
+        </data-table-column>
+
+        <data-table-column 
+            [property]="'$key'" 
+            [header]="'Action'">
+        <ng-template #dataTableCell let-item="item">
+            <a [routerLink]="['/admin/product', item.$key]" 
+                class="btn btn-primary">
+                Edit
+            </a>
+        </ng-template>
+    </data-table-column>
+    </data-table>
 </div>
 <ng-template #spinner>
     <ng-spinner [display]="true"></ng-spinner>
