--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,8 @@ body {
 button {
     letter-spacing: 0.6px;
 }
+
+#overlay {
+    /* spinner background color */
+    background: rgba(0, 0, 0, -1) !important; 
+}
