add cart-bucket qty func

--- a/src/app/form/admin/product-form/product-form.component.html
+++ b/src/app/form/admin/product-form/product-form.component.html
@@ -56,6 +56,6 @@
   <!-- Bootstrap Card -->
   <!-- Property binding : #title.value -->
   <div class="col-md-5">
-    <app-product-card [product]="product" [showActions]="false"></app-product-card>
+    <app-product-card [product]="product" [show-actions]="false"></app-product-card>
   </div>
 </div>
