--- a/src/app/management/product-card/product-card.component.html
+++ b/src/app/management/product-card/product-card.component.html
@@ -1,15 +1,35 @@
 <div *ngIf="product.title" class="card card-block">
-  <img 
-    *ngIf="product.imageUrl" 
-    class="card-img-top card-img-snap" 
-    [src]="product.imageUrl" 
-    alt="{{ product.title }} image">
+  <img *ngIf="product.imageUrl" class="card-img-top card-img-snap" [src]="product.imageUrl" alt="{{ product.title }} image">
 
   <div class="card-body">
     <h5 class="card-title">{{ product.title }}</h5>
     <p class="card-text">{{ product.price | currency:'USD': true}}</p>
   </div>
-  <div class="card-footer">
-    <a *ngIf="showActions"href="/" class="btn btn-primary btn-block">Add to Cart</a>
+
+  <div *ngIf="showActions" class="card-footer">
+    <button 
+      *ngIf="qtyInCart === 0; else updateQty" 
+      (click)="addToCart(product)" 
+      class="btn btn-secondary btn-block">
+      Add to Cart
+    </button>
+
+    <ng-template #updateQty>
+      <div class="row no-gutters">
+        <div class="col-2">
+          <button 
+            (click)="removeFromCart()"
+            class="btn btn-secondary btn-block">-</button>
+        </div>
+        <div class="col text-center">
+          {{ qtyInCart }} In Cart
+        </div>
+        <div class="col-2">
+          <button 
+            (click)="addToCart()"
+            class="btn btn-secondary btn-block">+</button>
+        </div>
+      </div>
+    </ng-template>
   </div>
 </div>
