Fixed bug on product-loads step

--- a/src/app/management/product-card/product-card.component.html
+++ b/src/app/management/product-card/product-card.component.html
@@ -9,7 +9,7 @@
   <div *ngIf="showActions" class="card-footer">
     <button 
       *ngIf="qtyInCart === 0; else updateQty" 
-      (click)="addToCart(product)" 
+      (click)="addToCart()" 
       class="btn btn-secondary btn-block">
       Add to Cart
     </button>
