--- a/src/app/management/products/product-filter/product-filter.component.html
+++ b/src/app/management/products/product-filter/product-filter.component.html
@@ -1,9 +1,16 @@
 <div class="sticky-top">
   <div class="list-group">
-    <a class="list-group-item list-group-item-action" [class.active]="!categorySelected" routerLink="/products">
+    <a 
+      class="list-group-item list-group-item-action" 
+      [class.active]="!categorySelected" 
+      routerLink="/products">
       All Categories
     </a>
-    <a *ngFor="let c of categories$ | async" routerLink="/products" [queryParams]="{ category: c.$key }" class="list-group-item list-group-item-action"
+    <a 
+      *ngFor="let c of categories$ | async" 
+      routerLink="/products" 
+      [queryParams]="{ category: c.$key }" 
+      class="list-group-item list-group-item-action"
       [class.active]="categorySelected ===  c.$key">
       {{ c.name }}
     </a>
