--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -8,7 +8,13 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
+        <a class="nav-link" routerLink="/shopping-cart">
+          Shopping Cart
+          <span 
+            class="badge badge-warning badge-pill" *ngIf="cartBucket$ | async as cart">
+            {{ cart.totalItemsCount }}
+          </span>
+        </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/products">Products</a>
