--- a/src/app/management/products/products.component.html
+++ b/src/app/management/products/products.component.html
@@ -5,7 +5,7 @@
   <div class="col">
     <div class="row">
       <ng-container *ngFor="let p of filteredProducts; let i = index">
-        <div class="col">
+        <div class="col" *ngIf="cart">
           <app-product-card [product]="p" [shopping-cart]="cart"></app-product-card>
         </div>
         <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
