Fixed bug on shopping-cart-quantity

--- a/src/app/management/shopping-cart/shopping-cart.component.html
+++ b/src/app/management/shopping-cart/shopping-cart.component.html
@@ -1,25 +1,29 @@
 <h1>Shopping Cart</h1>
-<ng-container *ngIf="cart$ | async as cart">
+<div class="row col-10" *ngIf="cart$ | async as cart">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
   </p>
   <table class="table">
     <thead>
       <tr>
+        <th>Photo</th>
         <th>Product</th>
-        <th>Quantity</th>
-        <th>Price</th>
+        <th class="text-center quantity-col">Quantity</th>
+        <th class="text-right price-col">Price</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of cart.items">
+        <td>
+          <div [style.backgroundImage]="'url('+item.imageUrl+')'" class="thumbnail"></div>
+        </td>
         <td>
           {{ item.title }}
         </td>
         <td>
           <app-product-quantity [product]="item" [shopping-cart]="cart"></app-product-quantity>
         </td>
-        <td>
+        <td class="text-right">
           {{ item.totalPrice | currency:'USD': true}}
         </td>
       </tr>
@@ -28,13 +32,11 @@
       <tr>
         <th></th>
         <th></th>
-        <th>
+        <th class="text-right">
           {{ cart.totalPrice | currency:'USD': true}}
         </th>
       </tr>
     </tfoot>
   </table>
-  <button 
-    (click)="clear()"
-    class="btn btn-danger btn-sm">Clear Shopping Cart</button>
-</ng-container>
+  <button (click)="clear()" class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+</div>
