--- a/src/app/management/products/products.component.html
+++ b/src/app/management/products/products.component.html
@@ -3,7 +3,7 @@
     <app-product-filter [category-selected]="categoryParam"></app-product-filter>
   </div>
   <div class="col">
-    <div class="row">
+    <div class="row" *ngIf="cart$ | async as cart">
       <ng-container *ngFor="let p of filteredProducts; let i = index">
         <div class="col" *ngIf="cart">
           <app-product-card [product]="p" [shopping-cart]="cart"></app-product-card>
