--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -31,7 +31,7 @@
           {{ auth.currentUserDisplayName }}
         </a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" routerLink="/{{ usernameSpliter }}/orders">My Orders</a>
+          <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
           <a class="{{ routeLinkClass }}" routerLink="/admin/orders">Manage Orders</a>
           <a class="{{ routeLinkClass }}" routerLink="/admin/products">Manage Products</a>
           <div class="dropdown-divider"></div>
