--- a/src/app/management/shopping-cart/shopping-cart.component.html
+++ b/src/app/management/shopping-cart/shopping-cart.component.html
@@ -2,6 +2,11 @@
 <div class="row col-10" *ngIf="cart$ | async as cart">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
+    <button 
+      *ngIf="cart.items.length"
+      (click)="clear()" 
+      class="btn btn-light btn-sm">Clear Shopping Cart
+  </button>
   </p>
   <table class="table">
     <thead>
@@ -32,11 +37,17 @@
       <tr>
         <th></th>
         <th></th>
+        <th></th>
         <th class="text-right">
           {{ cart.totalPrice | currency:'USD': true}}
         </th>
       </tr>
     </tfoot>
   </table>
-  <button (click)="clear()" class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+  <a 
+    *ngIf="cart.items.length"
+    routerLink="/check-out"
+    class="btn btn-primary">
+    Check Out
+  </a>
 </div>
