--- a/src/app/common/navbar/navbar.component.css
+++ b/src/app/common/navbar/navbar.component.css
@@ -2,7 +2,7 @@
     cursor: pointer;
 }
 
-.guest-user { 
+.guest-user {
     text-align: center;
     font-weight: bold;
     padding: 2px;
@@ -11,4 +11,10 @@
 a.disabled {
     pointer-events: none;
     cursor: default;
- }
+}
+
+.navbar {
+    -webkit-box-shadow: 2px 2px 8px #7c7c7c;
+    -moz-box-shadow: 2px 2px 8px #7c7c7c;
+    box-shadow: 2px 2px 8px #7c7c7c;
+}
